修复特定情况下BiMap覆盖Value后，仍能通过旧Value查询到Key问题